--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "@wdio/cucumber-framework": "^8.39.0",
     "@wdio/local-runner": "^8.39.1",
     "@wdio/spec-reporter": "^8.39.0",
-    "wdio-wait-for": "^3.0.11"
+    "wdio-wait-for": "^3.0.11",
+    "@cucumber/cucumber": "^10.8.0",
+    "@cucumber/gherkin": "^28.0.0",
+    "@cucumber/messages": "^25.0.1"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js",
     "wdio-headless": "wdio run ./wdio.conf.js --headless"
-  },
-  "dependencies": {
-    "@cucumber/cucumber": "^10.8.0",
-    "@cucumber/gherkin": "^28.0.0",
-    "@cucumber/messages": "^25.0.1"
   },
   "resolutions": {
     "@cucumber/cucumber": "^10.8.0",
